--- a/task 0.ipynb
+++ b/task 0.ipynb
@@ -19,11 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "a8f388a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите целое число: -1\n",
+      "Число -1 нечетное.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_even_odd(number):\n",
+    "    if number % 2 == 0:\n",
+    "        return f\"Число {number} четное.\"\n",
+    "    else:\n",
+    "        return f\"Число {number} нечетное.\"\n",
+    "\n",
+    "try:\n",
+    "    user_input = int(input(\"Введите целое число: \"))\n",
+    "    print(check_even_odd(user_input))\n",
+    "except ValueError:\n",
+    "    print(\"Введите целое число!\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,11 +59,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1e482b46",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите букву латинского алфавита: а\n",
+      "Ошибка: Введите одну букву латинского алфавита.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_vowel_consonant(letter):\n",
+    "    vowels = ['a', 'e', 'i', 'o', 'u']\n",
+    "\n",
+    "    if letter.lower() in vowels:\n",
+    "        return \"Это буква является гласной.\"\n",
+    "    elif letter.lower() == 'y':\n",
+    "        return \"Эта буква может быть как гласной, так и согласной.\"\n",
+    "    else:\n",
+    "        return \"Это буква является согласной.\"\n",
+    "\n",
+    "try:\n",
+    "    user_letter = input(\"Введите букву латинского алфавита: \")\n",
+    "    \n",
+    "    if len(user_letter) != 1 \n",
+    "    \n",
+    "    or not user_letter.isalpha() or not user_letter.isascii():\n",
+    "        raise ValueError(\"Ошибка: Введите одну букву латинского алфавита.\")\n",
+    "\n",
+    "    result = check_vowel_consonant(user_letter)\n",
+    "    print(result)\n",
+    "except ValueError as ve:\n",
+    "    print(str(ve))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,11 +118,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "57ef7b75",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Celsius    Fahrenheit\n",
+      "--------------------\n",
+      "0          32.00     \n",
+      "10         50.00     \n",
+      "20         68.00     \n",
+      "30         86.00     \n",
+      "40         104.00    \n",
+      "50         122.00    \n",
+      "60         140.00    \n",
+      "70         158.00    \n",
+      "80         176.00    \n",
+      "90         194.00    \n",
+      "100        212.00    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def celsius_to_fahrenheit(celsius):\n",
+    "    return (celsius * 9/5) + 32\n",
+    "\n",
+    "def print_temperature_table():\n",
+    "    print(\"{:<10} {:<10}\".format(\"Celsius\", \"Fahrenheit\"))\n",
+    "    print(\"-\" * 20)\n",
+    "    for celsius in range(0, 101, 10):\n",
+    "        fahrenheit = celsius_to_fahrenheit(celsius)\n",
+    "        print(\"{:<10} {:<10.2f}\".format(celsius, fahrenheit))\n",
+    "\n",
+    "print_temperature_table()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,11 +175,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "072dc701",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите целое число: 17\n",
+      "17 является простым числом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(num**0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        user_input = int(input(\"Введите целое число: \"))\n",
+    "        if is_prime(user_input):\n",
+    "            print(f\"{user_input} является простым числом.\")\n",
+    "        else:\n",
+    "            print(f\"{user_input} не является простым числом.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Ошибка: Введите целое число.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,8 +237,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "d85fa9f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ОРРОРООО (попыток: 8)\n",
+      "ОРРОРРООО (попыток: 9)\n",
+      "ОРРОРРР (попыток: 7)\n",
+      "РРОРРР (попыток: 6)\n",
+      "РРООО (попыток: 5)\n",
+      "РРР (попыток: 3)\n",
+      "ОРООРООРРР (попыток: 10)\n",
+      "РООО (попыток: 4)\n",
+      "ООРООО (попыток: 6)\n",
+      "ООРРР (попыток: 5)\n",
+      "Среднее количество попыток: 6.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def simulate_coin_toss():\n",
+    "    tosses = []  # Список подбрасываний (О - орел, Р - решка)\n",
+    "    consecutive_count = 0  # Счетчик подряд выпавших одинаковых значений\n",
+    "    attempts = 0  # Счетчик общего числа подбрасываний\n",
+    "\n",
+    "    while consecutive_count < 3:\n",
+    "        toss = random.choice(['О', 'Р'])\n",
+    "        tosses.append(toss)\n",
+    "        attempts += 1\n",
+    "\n",
+    "        if len(tosses) >= 3 and all(toss == tosses[-1] for toss in tosses[-3:]):\n",
+    "            consecutive_count = 3\n",
+    "        else:\n",
+    "            consecutive_count = 0\n",
+    "\n",
+    "    return ''.join(tosses), attempts\n",
+    "\n",
+    "total_attempts = 0\n",
+    "\n",
+    "for i in range(10):\n",
+    "    result, attempts = simulate_coin_toss()\n",
+    "    total_attempts += attempts\n",
+    "    print(f'{result} (попыток: {attempts})')\n",
+    "\n",
+    "average_attempts = total_attempts / 10\n",
+    "print(f'Среднее количество попыток: {average_attempts:.1f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e6721f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
